added a grid system to the main page

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -192,3 +192,18 @@ footer {
 p.copyright {
     margin: 15px 0 0;
 }
+.hero-spacer {
+    margin-top: 50px;
+}
+
+.hero-feature {
+    margin-bottom: 30px;
+}
+
+.hero11 {
+
+}
+
+footer {
+    margin: 50px 0;
+}
