made bunch of addons

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -203,6 +203,19 @@ p.copyright {
 .hero11 {
 
 }
+@media(min-width:700px) {
+.mainAddCart {
+  position: absolute;
+  bottom: 43px;
+  left: 30px;
+}
+.moreInfo{
+  position: absolute;
+  bottom: 43px;
+  right: 30px;
+}
+}
+
 
 footer {
     margin: 50px 0;
