added new theme for main page and fixed navbar issues

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -53,13 +53,21 @@ h6 {
     font-size: 18px;
     font-weight: 400;
 }
+.navbar{
+  margin-bottom: 0px;
+  margin-top: 0px;
+}
 
 .intro-header {
     padding-top: 50px; /* If you're making other pages, make sure there is 50px of padding to make sure the navbar doesn't overlap content! */
     padding-bottom: 50px;
     text-align: center;
     color: #f8f8f8;
-    background: url(http://www.hms-beagle.com/WebSiteGraphics/StoreFront.jpg) no-repeat center center;
+    background: url('http://www.uvm.edu/~arch/projects/images/store.jpg') no-repeat center center fixed;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
     background-size: cover;
 }
 
@@ -216,6 +224,7 @@ p.copyright {
   right: 30px;
 }
 }
+
 
 
 footer {
