order page pulling in cart info

--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -20,6 +20,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'account/login/login.scss';
 @import 'admin/admin.scss';
 @import 'cart/cart.scss';
+@import 'checkout/checkout.scss';
 @import 'main/main.scss';
 @import 'product/product.scss';
 @import 'modal/modal.scss';
