we got the cart done, Faisal is very smart

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -228,7 +228,14 @@ p.copyright {
   font-size: 15px;
   font-weight: 200;
 }
+.damit{
+    position: relative;
+}
 
+.search-product-form{
+    position: absolute;
+
+}
 
 
 
