--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -22,6 +22,7 @@ $fa-font-path: "/bower_components/font-awesome/fonts";
 @import 'cart/cart.scss';
 @import 'checkout/checkout.scss';
 @import 'main/main.scss';
+@import 'pastOrders/pastOrders.scss';
 @import 'product/product.scss';
 @import 'modal/modal.scss';
 // endinjector
